# homework_22

./: .env.sample  catalog.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_article_created_at_article_create_at.py  0003_alter_article_create_at.py  0004_alter_article_active_is.py
blog/templates/blog/: article_confirm_delete.html  article_create.html  article_detail.html  article_form.html  article_list.html  base.html  contacts.html  home.html
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_elements.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: base.html  catalog.html  contacts.html  home.html  index.html  orders.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_footer.html  inc_header.html  inc_menu.html
catalog/templates/trash/: catalog.html  catalog_test.html  home_test.html  index.html  orders.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_customuser_country.py  0003_alter_customuser_options_alter_customuser_avatar_and_more.py  0004_customuser_token_alter_customuser_country.py
users/templates/users/: edit_profile.html  login.html  profile_success.html  register.html
